# tATA

./: .gitignore  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: rust.yaml
app/: .gitignore  README.md  settings.gradle
app/About/: build.gradle
app/About/src/androidTest/java/com/tomicooler/tata/core/: ApplicationTest.java
app/About/src/main/: AndroidManifest.xml
app/About/src/main/java/com/tomicooler/tata/core/: AboutActivity.java
app/About/src/main/res/layout/: activity_about.xml
app/About/src/main/res/values/: strings.xml
app/About/src/main/res/values-hu/: strings.xml
app/TataPOJO/: build.gradle
app/TataPOJO/src/main/: AndroidManifest.xml
app/TataPOJO/src/main/java/com/tomicooler/tata/: Order.java  Parizer.java  Serializer.java
app/TataPOJO/src/main/java/com/tomicooler/tata/pojo/: Call.java  CarLocation.java  Park.java  ParkLocation.java  Position.java  Protector.java  ReceiverInfo.java  Refresh.java  Service.java  Status.java  Watcher.java
app/TataPOJO/src/test/java/com/tomicooler/tata/: ParizerTest.java
app/WatcherCommon/: build.gradle
app/WatcherCommon/src/androidTest/java/com/tomicooler/tata/watchercommon/: ApplicationTest.java
app/WatcherCommon/src/main/: AndroidManifest.xml
app/WatcherCommon/src/main/java/com/tomicooler/tata/watchercommon/: CommandHandler.java  MapFragment.java  PopupAdapter.java  Preferences.java
app/WatcherCommon/src/main/res/drawable/: ic_mapbutton.xml  ic_mapbutton_disabled.xml  ic_mapbutton_enabled.xml  ic_mapbutton_focused.xml  ic_mapbutton_pressed.xml  ic_parking_toggle.xml  ic_service_toggle.xml
app/WatcherCommon/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_map.xml  popup.xml
app/WatcherCommon/src/main/res/menu/: main_activity_actions.xml
app/WatcherCommon/src/main/res/values/: colors.xml  strings.xml
app/WatcherCommon/src/main/res/values-hu/: strings.xml
app/WatcherSMS/: build.gradle  proguard-rules.pro
app/WatcherSMS/src/androidTest/java/com/tomicooler/tata/watchersms/: ApplicationTest.java
app/WatcherSMS/src/main/: AndroidManifest.xml
app/WatcherSMS/src/main/java/com/tomicooler/tata/watchersms/: MainActivity.java  PreferencesFragment.java  SMSPreferences.java  SettingsActivity.java  SmsBroadcastReceiver.java  SmsIntentService.java  Telephoner.java
app/WatcherSMS/src/main/res/values/: strings.xml
app/WatcherSMS/src/main/res/values-hu/: strings.xml
app/WatcherSMS/src/main/res/xml/: preferences.xml
app/gradle/wrapper/: gradle-wrapper.properties
app/tataicons/: logo-protector-promo.xcf  logo-protector.xcf  sources
pico/: CMakeLists.txt  Cargo.toml  README.md
pico/app/: CMakeLists.txt  Cargo.toml  main.cpp  sim868.cpp  sim868.h
pico/app/.cargo/: config.toml
pico/app/src/: main.rs
pico/lib/: CMakeLists.txt  battery.h  caller.h  executor.h  gpslocator.h  gsmlocator.h  location.h  locationservice.h  network.h  scope_exit.h  smssender.h  testutils.h  tst_location.cpp  tst_phone.cpp  utils.h
pico/machine-derive/: Cargo.toml
pico/machine-derive/src/: lib.rs
pico/pico-lib/: Cargo.toml
pico/pico-lib/src/: at.rs  battery.rs  call.rs  gps.rs  gsm.rs  hexstr.rs  lib.rs  location.rs  network.rs  poro.rs  service.rs  sms.rs  urc.rs  utils.rs
pico/poco/: CMakeLists.txt  common.h  debug.h  human.cpp  human.h  machine.cpp  machine.h  parizer.h  poco.h  protector.h  tst_poco.cpp  watcher.h
