[package]
name = "tATA-pico"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-lib = { path = "../pico-lib" }

embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-usb-logger = { version = "0.5.1" }

embedded-alloc = "0.6.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = "1.0.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
log = "0.4"

atat = { version = "0.24.1", features = ["log", "heapless"] }
static_cell = { version = "2" }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }

[[bin]]
name = "tATA-pico"
path = "src/main.rs"
test = false
doctest = false
bench = false
