[package]
name = "tATA-pico"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-lib = { path = "../pico-lib" }

embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-futures = { version = "0.1.2" }

embedded-alloc = "0.6.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"

atat = { version = "0.24.1", features = ["defmt", "heapless"] }
static_cell = { version = "2" }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }

fasttime = { version = "0.1", default-features = false }

[[bin]]
name = "tATA-pico"
path = "src/main.rs"
test = false
doctest = false
bench = false
